--- a/Group5_Project/package.json
+++ b/Group5_Project/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "client": "cd client && npm start",
         "server": "cd backend && npm start",
-        "dev": "concurrently \"npm run server\" \"npm run client\""
+        "dev": "concurrently \"npm run server\" \"npm run client\"",
+        "build": "cd client && npm run build"
     },
     "dependencies": {
         "bcrypt": "^5.1.1",
