--- a/Group5_Project/backend/package.json
+++ b/Group5_Project/backend/package.json
@@ -4,25 +4,25 @@
     "description": "Backend for the Group5 project",
     "main": "server.js",
     "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js"
+        "start": "node server.js",
+        "dev": "nodemon server.js"
     },
     "dependencies": {
-      "express": "^4.17.1",
-      "mongoose": "^5.11.18",
-      "cors": "^2.8.5",
-      "dotenv": "^8.2.0",
-      "body-parser": "^1.19.0",
-      "bcrypt": "^5.0.1",
-      "path": "^0.12.7"
+        "bcrypt": "^5.0.1",
+        "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "express-session": "^1.18.1",
+        "mongoose": "^5.11.18",
+        "path": "^0.12.7"
     },
     "devDependencies": {
-      "nodemon": "^2.0.7"
+        "nodemon": "^2.0.7"
     },
     "engines": {
-      "node": ">=14.0.0"
+        "node": ">=14.0.0"
     },
     "author": "Your Name",
     "license": "MIT"
-  }
-  
+}
