--- a/Group5_Project/backend/package.json
+++ b/Group5_Project/backend/package.json
@@ -15,6 +15,7 @@
         "express": "^4.17.1",
         "express-session": "^1.18.1",
         "mongoose": "^5.11.18",
+        "multer-gridfs-storage": "^5.0.2",
         "path": "^0.12.7"
     },
     "devDependencies": {
