--- a/Group5_Project/backend/package.json
+++ b/Group5_Project/backend/package.json
@@ -4,8 +4,8 @@
     "description": "Backend for the Group5 project",
     "main": "server.js",
     "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js"
+    "start": "bun server.js", 
+    "build": "echo 'No build step for backend'"
     },
     "dependencies": {
       "express": "^4.17.1",
