--- a/Group5_Project/package.json
+++ b/Group5_Project/package.json
@@ -7,6 +7,8 @@
         "client": "cd client && npm start",
         "server": "cd backend && npm start",
         "dev": "concurrently \"npm run server\" \"npm run client\""
+            "start": "bun server.js", 
+    "build": "echo 'No build step for backend'"
     },
     "dependencies": {
         "bcrypt": "^5.1.1",
